fix z-index for header so dropdown menu shows on top of the page

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -11,7 +11,7 @@
   margin: 0 auto;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 3;
 }
 
 .nav-bar-left {
